syntax = "proto3";

package chatsprotobuf;

option go_package = "./chatsprotobuf";

message SavedFile {
    string original_url = 1;
    string original_filename = 2;
    optional string converted_url = 3;
    optional string converted_filename = 4;
}

message ChatResponse {
    int32 id = 1;
    SavedFile avatar = 2;
    string title = 3;
    string type = 4;
    repeated int32 members_ids = 5;
    bool is_archived = 6;
    int32 owner_id = 7;
    repeated int32 admins_ids = 8;
}

message MessageReaction {
    int32 id = 1;
    int32 user_id = 2;
    string content = 3;
}

message MessageResponse {
    int32 id = 1;
    int32 sender_id = 2;
    int32 chat_id = 3;
    string type = 4;
    string content = 5;
    optional SavedFile voice = 6;
    optional SavedFile circle = 7;
    repeated SavedFile attachments = 8;
    optional int32 reply_to_id = 9;
    repeated int32 mentioned = 10;
    repeated int32 readed_by = 11;
    repeated MessageReaction reactions = 12;
    repeated int32 deleted_for = 13;
    optional string created_at = 14;
}

message GetChatByIdRequest {
    int32 id = 1;
    string token = 2;
}

message GetChatsByIdsRequest {
    repeated int32 ids = 1;
    string token = 2;
}

message GetMessagesByIdsRequest {
    repeated int32 ids = 1;
    string token = 2;
}

message GetMessageByIdRequest {
    int32 id = 1;
    string token = 2;
}

message GetMessagesByChatIdRequest {
    int32 chat_id = 1;
    string token = 2;
    optional int32 offset = 3;
    optional int32 limit = 4;
}

message ChatsArrayResponse {
    repeated ChatResponse chats = 1;
}

message MessagesArrayResponse {
    repeated MessageResponse messages = 1;
}

message PaginatedMessages {
    int32 offset = 1;
    int32 limit = 2;
    int32 total = 3;
    repeated MessageResponse data = 4;
}

service Chats {
    rpc GetChatById(GetChatByIdRequest) returns (ChatResponse) {}
    rpc GetMessageById(GetMessageByIdRequest) returns (MessageResponse) {}
    rpc GetChatsByIds(GetChatsByIdsRequest) returns (ChatsArrayResponse) {}
    rpc GetMessagesByIds(GetMessagesByIdsRequest) returns (MessagesArrayResponse) {}
    rpc GetMessagesByChatId(GetMessagesByChatIdRequest) returns (PaginatedMessages) {}
}
